# wordle

./: .env.example  Dockerfile  Makefile  README.md  aiusagepythonproject.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
wordle/: admin.py  errors.py  models.py  urls.py  utils.py  views.py
wordle/data/: AllowedWords.json  terms.json
wordle/management/commands/: import_words.py
wordle/migrations/: 0001_initial.py  0002_allowedword.py  0003_alter_game_id_alter_term_word.py  0004_game_created_at_alter_allowedword_word_and_more.py
wordle/templates/: auth.html  game.html  index.html  menu.html  rating.html
wordle/tests/: test_auth.py  test_definition.py  test_game.py  test_leaderboard.py
