[project]
name = "ru-project"
version = "0.1.0"
description = "✌️"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-stubs>=6.0.4",
    "djangorestframework>=3.17.1",
    "djangorestframework-types>=0.9.0",
    "dotenv>=0.9.9",
    "psycopg[binary]>=3.3.4",
    "gunicorn>=23.0.0",
]
